added respond.js to responsive boilerplate

--- a/instructor-examples/labs/responsive-document-boilerplate.html
+++ b/instructor-examples/labs/responsive-document-boilerplate.html
@@ -27,6 +27,11 @@
     <script src="your-choice-of-html5-polyfill.js"></script>
   <![endif]-->
 
+  <!-- (6)  Use the respond.js polyfill, so that media queries work
+            on IE8. -->
+  <script src="respond.js"></script>
+
+
 
 </head>
 <body>
