moved respond.js into IE8 conditional

--- a/instructor-examples/labs/responsive-document-boilerplate.html
+++ b/instructor-examples/labs/responsive-document-boilerplate.html
@@ -22,14 +22,13 @@
   <link rel="stylesheet" type="text/css" href="normalize-or-reset.css" />
 
   <!-- (5)  Use an HTML5 polyfill, either HTML5shiv (smaller)
-            or Modernizr (more features). -->
+            or Modernizr (more features).
+            Also, use Respond.js for so that IE8 will recognize
+            the media queries -->
   <!--[if lt IE 9]>
     <script src="your-choice-of-html5-polyfill.js"></script>
+    <script src="respond.js"></script>
   <![endif]-->
-
-  <!-- (6)  Use the respond.js polyfill, so that media queries work
-            on IE8. -->
-  <script src="respond.js"></script>
 
 
 
