simplified project folder structure

--- a/instructor-examples/Module 3 - Responsive Web Design/[Lab] Responsive Boilerplate/standard-boilerplate.html
+++ b/instructor-examples/Module 3 - Responsive Web Design/[Lab] Responsive Boilerplate/standard-boilerplate.html
@@ -18,15 +18,22 @@
 
   <title></title>
 
-  <!-- (5)  Use a modern CSS reset -->
+  <!-- (5)  Use a modern CSS reset
+
+      -->
   <link rel="stylesheet" type="text/css" href="normalize-or-reset.css" />
 
   <!-- (5)  Use an HTML5 polyfill, either HTML5shiv (smaller)
             or Modernizr (more features).
+              • https://github.com/aFarkas/html5shiv
+              • https://github.com/Modernizr/Modernizr
+
             Also, use Respond.js for so that IE8 will recognize
-            the media queries -->
+            the media queries
+              • https://github.com/scottjehl/Respond
+            -->
   <!--[if lt IE 9]>
-    <script src="your-choice-of-html5-polyfill.js"></script>
+    <script src="html5shiv.js"></script>
     <script src="respond.js"></script>
   <![endif]-->
 
