start project -- process section

--- a/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/index.html
+++ b/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/index.html
@@ -18,50 +18,55 @@
 
 </head><body>
   <p class="viewport-label"></p>
+  <nav>
+    <a class="brand" href="#">Start</a>
+    <ul>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Work</a></li>
+      <li><a href="#">Expertise</a></li>
+      <li><a href="#">Books</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
   <header></header>
 
-  <div class="container">
-    <div class="row">
-      <div class="column">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et quidem saepe quaerimus verbum Latinum par Graeco et quod idem valeat; Sin kakan malitiam dixisses, ad aliud nos unum certum vitium consuetudo Latina traduceret. Ergo illi intellegunt quid Epicurus dicat, ego non intellego? Duo Reges: constructio interrete. Sin aliud quid voles, postea. Illi enim inter se dissentiunt. Potius inflammat, ut coercendi magis quam dedocendi esse videantur. Itaque et manendi in vita et migrandi ratio omnis iis rebus, quas supra dixi, metienda.</p>
-      </div>
-      <div class="column">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ubi ut eam caperet aut quando? Potius inflammat, ut coercendi magis quam dedocendi esse videantur. Beatum, inquit. Hic nihil fuit, quod quaereremus. Satisne ergo pudori consulat, si quis sine teste libidini pareat?</p>
-      </div>
-      <div class="column">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Simus igitur contenti his. Obsecro, inquit, Torquate, haec dicit Epicurus? Quoniam, si dis placet, ab Epicuro loqui discimus. Sic consequentibus vestris sublatis prima tolluntur. Duo Reges: constructio interrete. Videamus animi partes, quarum est conspectus illustrior; Quid enim de amicitia statueris utilitatis causa expetenda vides.</p>
-      </div>
-      <div class="column">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duae sunt enim res quoque, ne tu verba solum putes. Quasi ego id curem, quid ille aiat aut neget. Aeque enim contingit omnibus fidibus, ut incontentae sint. Quamquam id quidem licebit iis existimare, qui legerint. Quid enim de amicitia statueris utilitatis causa expetenda vides.</p>
-      </div>
-      <div class="column">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
-      <div class="column">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed haec omittamus; An hoc usque quaque, aliter in vita? Quod autem ratione actum est, id officium appellamus. Duo Reges: constructio interrete. Videsne, ut haec concinant? Dolere malum est: in crucem qui agitur, beatus esse non potest.</p>
-      </div>
-      <div class="column">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urgent tamen et nihil remittunt. Sed tamen omne, quod de re bona dilucide dicitur, mihi praeclare dici videtur. Quae quidem sapientes sequuntur duce natura tamquam videntes; At iam decimum annum in spelunca iacet. Quid ait Aristoteles reliquique Platonis alumni? Sed id ne cogitari quidem potest quale sit, ut non repugnet ipsum sibi.</p>
-      </div>
-      <div class="column">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dempta enim aeternitate nihilo beatior Iuppiter quam Epicurus; Videamus animi partes, quarum est conspectus illustrior; Num igitur utiliorem tibi hunc Triarium putas esse posse, quam si tua sint Puteolis granaria? Illa sunt similia: hebes acies est cuipiam oculorum, corpore alius senescit;</p>
-      </div>
-      <div class="column">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quid, quod res alia tota est? Haec bene dicuntur, nec ego repugno, sed inter sese ipsa pugnant. Tecum optime, deinde etiam cum mediocri amico. Venit enim mihi Platonis in mentem, quem accepimus primum hic disputare solitum; Duo Reges: constructio interrete. Hoc positum in Phaedro a Platone probavit Epicurus sensitque in omni disputatione id fieri oportere.</p>
-      </div>
-      <div class="column">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Si quicquam extra virtutem habeatur in bonis. Quare ad ea primum, si videtur; Atque haec coniunctio confusioque virtutum tamen a philosophis ratione quadam distinguitur. Recte, inquit, intellegis. Non enim ipsa genuit hominem, sed accepit a natura inchoatum. Primum in nostrane potestate est, quid meminerimus? Proclivi currit oratio. Et ais, si una littera commota sit, fore tota ut labet disciplina.</p>
-      </div>
-      <div class="column">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facillimum id quidem est, inquam. Quod autem in homine praestantissimum atque optimum est, id deseruit. Ostendit pedes et pectus.</p>
-      </div>
-    </div> <!-- /.row -->
-  </div> <!-- /.container -->
+  <section class="process">
+    <div class="container">
+      <h1>How We Work.</h1>
+      <div class="row clearfix">
+        <div class="process-communication column">
+          <span class="icon"></span>
+          <h2>Open</h2>
+          <p>Communication is everything. We make sure you are always in the loop.</p>
+        </div>
+        <div class="process-organization column">
+          <span class="icon"></span>
+          <h2>Organized</h2>
+          <p>Always on point, and always on time. Proud to be professionals in the industry we love.</p>
+        </div>
+        <div class="process-education column">
+          <span class="icon"></span>
+          <h2>Educated</h2>
+          <p>We’ve done our homework and we’re sure you’ll be impressed with what we bring to the table.</p>
+        </div>
+        <div class="process-efficiency column">
+          <span class="icon"></span>
+          <h2>Efficient</h2>
+          <p>Speed isn’t everything, but finding the perfect balance between speed and quality is.</p>
+        </div>
+        <div class="process-creativity column">
+          <span class="icon"></span>
+          <h2>Creative</h2>
+          <p>Always Inspired. Being creative is the whole reason we got into this business in the first place.</p>
+        </div>
+        <div class="process-accuracy column">
+          <span class="icon"></span>
+          <h2>Accurate</h2>
+          <p>When we aim for something, we hit it. When it comes to our clients, we aim to please.</p>
+        </div>
+      </div> <!-- /.row -->
+    </div> <!-- /.container -->
+  </section>
 
 
 </body></html>
