start project -- fixed up main nav

--- a/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/index.html
+++ b/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/index.html
@@ -16,17 +16,25 @@
   <![endif]-->
 
 
-</head><body>
+</head><body class="landing-page">
   <p class="viewport-label"></p>
   <nav>
-    <a class="brand" href="#">Start</a>
-    <ul>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Work</a></li>
-      <li><a href="#">Expertise</a></li>
-      <li><a href="#">Books</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
+    <div class="container clearfix">
+      <div class="row">
+        <div class="column">
+          <a class="brand" href="#">Start</a>
+        </div>
+        <div class="column">
+          <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Work</a></li>
+            <li><a href="#">Expertise</a></li>
+            <li><a href="#">Books</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </nav>
   <header></header>
 
