start project -- added intro section

--- a/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/index.html
+++ b/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/index.html
@@ -38,6 +38,15 @@
   </nav>
   <header></header>
 
+  <section class="intro">
+    <div class="container">
+      <h1>Bridging the gap between ideas and reality.</h1>
+      <p>Ideas are nothing without execution. We not only offer a full strategy service, but take pride in seeing it through to the final stages. Concept to Reality. That’s what we’re here for.</p>
+      <a class="button button-primary" href="#">Request a Quote</a>
+      <a class="button button-default" href="#">View Portfolio</a>
+    </div>
+  </section>
+
   <section class="process">
     <div class="container">
       <h1>How We Work.</h1>
