start project -- element/context

--- a/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/index.html
+++ b/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/index.html
@@ -5,9 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title></title>
+  <title>Start Inc. | Digital Design Agency | NY, NY</title>
 
-  <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" />
+  <link rel="stylesheet" type="text/css" href="stylesheets/vendor/normalize.css" />
   <link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
 
   <!--[if lt IE 9]>
@@ -16,27 +16,35 @@
   <![endif]-->
 
 
-</head><body class="landing-page">
+</head>
+<body class="landing-page">
   <p class="viewport-label"></p>
-  <nav>
-    <div class="container clearfix">
-      <div class="row">
-        <div class="column">
-          <a class="brand" href="#">Start</a>
-        </div>
-        <div class="column">
-          <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Work</a></li>
-            <li><a href="#">Expertise</a></li>
-            <li><a href="#">Books</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </nav>
-  <header></header>
+  <h1 class="outline-only">We Are Start</h1>
+  <header>
+    <nav class="site-nav">
+      <h1 class="outline-only">Table of Contents</h1>
+      <div class="container clearfix">
+        <div class="grid">
+
+          <div class="grid-frame">
+            <a class="branding-logo" href="#">Start</a>
+          </div>
+
+          <div class="grid-frame">
+            <ul>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Work</a></li>
+              <li><a href="#">Expertise</a></li>
+              <li><a href="#">Books</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
+
+        </div> <!-- /.grid -->
+      </div> <!-- /.container -->
+    </nav>
+    <div class="branding-banner"></div>
+  </header>
 
   <section class="intro">
     <div class="container">
@@ -50,40 +58,72 @@
   <section class="process">
     <div class="container">
       <h1>How We Work.</h1>
-      <div class="row clearfix">
-        <div class="process-communication column">
-          <span class="icon"></span>
+      <div class="grid clearfix">
+        <div class="process-communication grid-frame">
+          <span class="process-icon"></span>
           <h2>Open</h2>
           <p>Communication is everything. We make sure you are always in the loop.</p>
         </div>
-        <div class="process-organization column">
-          <span class="icon"></span>
+        <div class="process-organization grid-frame">
+          <span class="process-icon"></span>
           <h2>Organized</h2>
           <p>Always on point, and always on time. Proud to be professionals in the industry we love.</p>
         </div>
-        <div class="process-education column">
-          <span class="icon"></span>
+        <div class="process-education grid-frame">
+          <span class="process-icon"></span>
           <h2>Educated</h2>
           <p>We’ve done our homework and we’re sure you’ll be impressed with what we bring to the table.</p>
         </div>
-        <div class="process-efficiency column">
-          <span class="icon"></span>
+        <div class="process-efficiency grid-frame">
+          <span class="process-icon"></span>
           <h2>Efficient</h2>
           <p>Speed isn’t everything, but finding the perfect balance between speed and quality is.</p>
         </div>
-        <div class="process-creativity column">
-          <span class="icon"></span>
+        <div class="process-creativity grid-frame">
+          <span class="process-icon"></span>
           <h2>Creative</h2>
           <p>Always Inspired. Being creative is the whole reason we got into this business in the first place.</p>
         </div>
-        <div class="process-accuracy column">
-          <span class="icon"></span>
+        <div class="process-accuracy grid-frame">
+          <span class="process-icon"></span>
           <h2>Accurate</h2>
           <p>When we aim for something, we hit it. When it comes to our clients, we aim to please.</p>
         </div>
-      </div> <!-- /.row -->
+      </div> <!-- /.grid -->
+    </div> <!-- /.container -->
+  </section>
+
+  <section class="portfolio">
+    <div class="container">
+      <h1>Recent Projects.</h1>
+      <nav>
+        <h1 class="outline-only">Project Categories</h1>
+        <ul>
+          <li><a href="#">All</a></li>
+          <li><a class="active" href="#">Web Design</a></li>
+          <li><a href="#">Branding</a></li>
+          <li><a href="#">Corporate</a></li>
+          <li><a href="#">Motion Graphics</a></li>
+          <li><a href="#">Photography</a></li>
+        </ul>
+      </nav>
+      <div class="grid">
+        <div class="grid-frame">
+          <img src="images/projects/specless.png" alt="" />
+        </div> <!-- /.grid-frame -->
+        <div class="grid-frame">
+          <img src="images/projects/applove.png" alt="" />
+        </div> <!-- /.grid-frame -->
+        <div class="grid-frame">
+          <img src="images/projects/onehub.png" alt="" />
+        </div> <!-- /.grid-frame -->
+        <div class="grid-frame">
+          <img src="images/projects/evernote.png" alt="" />
+        </div> <!-- /.grid-frame -->
+      </div> <!-- /.grid -->
     </div> <!-- /.container -->
   </section>
 
 
-</body></html>
+</body>
+</html>
