start project -- more intermediate styles

--- a/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/index.html
+++ b/instructor-examples/Module 3 - Responsive Web Design/[Project] Start Web Design Responsive Template/index.html
@@ -50,9 +50,10 @@
     <div class="container">
       <h1>Bridging the gap between ideas and reality.</h1>
       <p>Ideas are nothing without execution. We not only offer a full strategy service, but take pride in seeing it through to the final stages. Concept to Reality. That’s what we’re here for.</p>
-      <a class="button button-primary" href="#">Request a Quote</a>
-      <a class="button button-default" href="#">View Portfolio</a>
-    </div>
+      <div class="button-group">
+        <a class="button button-primary" href="#">Request a Quote</a><a class="button button-default" href="#">View Portfolio</a>
+      </div>
+    </div><!-- /.container -->
   </section>
 
   <section class="process">
@@ -125,5 +126,7 @@
   </section>
 
 
+
+  <script src="javascripts/no-widow.js"></script>
 </body>
 </html>
